Fixed the landing page on mobile

--- a/css/master.css
+++ b/css/master.css
@@ -222,6 +222,24 @@ input{
   font-size: 14px;
 }
 
+@media only screen and (max-width: 768px){
+  .landing{
+    padding: 7% 20px;
+  }
+  
+  .left-caption{
+    display: none;
+  }
+
+  .right-caption{
+    display: none;
+  }
+
+  .center-caption{
+    display: none;
+  }
+}
+
 .landing input{
   background-color: #eeeeee;
   padding: 20px 25px;
